@@ -1,17 +1,20 @@
 package com.workout.exception;
 
-import java.util.stream.Collectors;
 import java.util.List;
 
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.slf4j.Logger;
 
-@ControllerAdvice
+@RestControllerAdvice
 public class GlobalExceptionHandle {
+
+  private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandle.class);
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
   public ResponseEntity<ErrorResponse> handleBadRequestException(MethodArgumentNotValidException ex) {
@@ -19,30 +22,29 @@ public class GlobalExceptionHandle {
         .getFieldErrors()
         .stream()
         .map(error -> error.getField() + ": " + error.getDefaultMessage())
-        .collect(Collectors.toList());
+        .toList();
 
-    ErrorResponse error = new ErrorResponse(HttpStatus.BAD_REQUEST, "入力値が不正です" + details);
-    return ResponseEntity.badRequest().body(error);
+    return ResponseEntity.badRequest()
+        .body(new ErrorResponse(HttpStatus.BAD_REQUEST.value(), "入力値が正しくありません", details));
 
-  }
-
-  @ExceptionHandler(HttpMessageNotReadableException.class)
-  public ResponseEntity<ErrorResponse> handleReadableException(HttpMessageNotReadableException ex) {
-    ErrorResponse error = new ErrorResponse(HttpStatus.BAD_REQUEST, "JSON形式が正しくありません");
-    return ResponseEntity.badRequest().body(error);
   }
 
   @ExceptionHandler(IllegalArgumentException.class)
-  public ResponseEntity<ErrorResponse> handleBadRequest(IllegalArgumentException ex) {
-    ErrorResponse error = new ErrorResponse(HttpStatus.BAD_REQUEST, ex.getMessage());
-    return ResponseEntity.badRequest().body(error);
+  public ResponseEntity<ErrorResponse> handleIllegalArgument(IllegalArgumentException ex) {
+    return ResponseEntity.badRequest()
+        .body(new ErrorResponse(HttpStatus.BAD_REQUEST.value(), ex.getMessage(), List.of()));
+  }
+
+  @ExceptionHandler(HttpMessageNotReadableException.class)
+  public ResponseEntity<ErrorResponse> handleBadRequest(HttpMessageNotReadableException ex) {
+    return ResponseEntity.badRequest()
+        .body(new ErrorResponse(HttpStatus.BAD_REQUEST.value(), "JSON形式が正しくありません", List.of()));
   }
 
   @ExceptionHandler(Exception.class)
   public ResponseEntity<ErrorResponse> handleGeneralException(Exception ex) {
-    ex.printStackTrace();
-
-    ErrorResponse error = new ErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR, "システムエラーが発生しました");
-    return ResponseEntity.internalServerError().body(error);
+    log.error("Unhandled exception occurred: ", ex);
+    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .body(new ErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR.value(), "サーバーエラーが発生しました", List.of()));
   }
 }
